# C_Scratch

./: .gitignore  README.md
common/include/: Utils.h
common/src/: Utils.c
linked_list/: .gitignore  CMakeLists.txt  README.md
linked_list/include/: Utils.h  list_node.h  ll_node.h  lltest_version.h.in
linked_list/src/: list_node.c  ll_node.c
linked_list/test/: main.c
